<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">R1ck M0rty</string>
    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="search_hint">GitHub Repository</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">unknown</string>
    <string name="retry">Retry</string>
    <string name="locations">Locations</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="all">all</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="genderless">genderless</string>
    <string name="charac_detail">character detail</string>
    <string name="about_menu_item_text">About</string>
    <string name="about">О программе</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>

    <string name="sbtl">Height, m</string>
    <string name="tl">354.4</string>
</resources>
